force-app/main/default/objects/License__c/fields/ElectiveCreditsNeededThisPeriod__c.field-meta.xml
<CustomField>
    <fullName>ElectiveCreditsNeededThisPeriod__c</fullName>
    <formula>IF((ElectiveCreditsRequiredThisPeriod__c -  ElectiveCreditsThisLicensePeriod__c) &lt; 0, 0, (ElectiveCreditsRequiredThisPeriod__c -  ElectiveCreditsThisLicensePeriod__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elective Credits Needed - This Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>