force-app/main/default/objects/License__c/fields/ElectiveCreditsPreviousLicPeriod__c.field-meta.xml
<CustomField>
    <fullName>ElectiveCreditsPreviousLicPeriod__c</fullName>
    <label>Elective Credits - Previous  Lic Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>