force-app/main/default/objects/License__c/fields/ElectiveCreditsRequiredLastPeriod__c.field-meta.xml
<CustomField>
    <fullName>ElectiveCreditsRequiredLastPeriod__c</fullName>
    <formula>LicenseType__r.PreviousPeriodElectiveCERequirement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elective Credits Required - Last Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>