force-app/main/default/objects/License__c/fields/ElectiveCreditsRequiredThisPeriod__c.field-meta.xml
<CustomField>
    <fullName>ElectiveCreditsRequiredThisPeriod__c</fullName>
    <formula>IF(
 ExemptfromCE__c = true,
0,
LicenseType__r.CurrentPeriodElectiveCERequirement__c
)</formula>
    <label>Elective Credits Required - This Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>