force-app/main/default/objects/License__c/fields/ElectiveCreditsThisLicensePeriod__c.field-meta.xml
<CustomField>
    <fullName>ElectiveCreditsThisLicensePeriod__c</fullName>
    <label>Elective Credits - This License Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>