force-app/main/default/objects/License__c/fields/EmployeePrincipalEmployee__c.field-meta.xml
<CustomField>
    <fullName>EmployeePrincipalEmployee__c</fullName>
    <description>PacPoint-FT021220- Created for PVL phase 1</description>
    <inlineHelpText>This holds the Employee or Principal Employee.  Used for Licenses Types that don&apos;t require licensed principals, like COLA, COLAX, etc. This was previously housed in the Business Address.</inlineHelpText>
    <label>Employee / Principal Employee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>