force-app/main/default/objects/License__c/fields/EmployerAddressEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EmployerAddressEffectiveDate__c</fullName>
    <description>PacPoint-KN102819-Created for PVL Sprint 2 Phase 1</description>
    <label>Employer Address Effective Date</label>
    <type>Date</type>
</CustomField>