force-app/main/default/objects/License__c/fields/EmployerCity__c.field-meta.xml
<CustomField>
    <fullName>EmployerCity__c</fullName>
    <description>PacPoint-KN101819-Created for PVL Sprint 2 Phase 1</description>
    <label>Employer City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>