force-app/main/default/objects/License__c/fields/EmployerState__c.field-meta.xml
<CustomField>
    <fullName>EmployerState__c</fullName>
    <description>PacPoint-KN101819-Created for PVL Sprint 2 Phase 1</description>
    <label>Employer State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>USStates</valueSetName>
    </valueSet>
</CustomField>