force-app/main/default/objects/License__c/fields/EmployerStreet__c.field-meta.xml
<CustomField>
    <fullName>EmployerStreet__c</fullName>
    <description>PacPoint-KN101819-Created for PVL Sprint 2 Phase 1</description>
    <label>Employer Street</label>
    <type>TextArea</type>
</CustomField>