force-app/main/default/objects/License__c/fields/EmployerZipCode__c.field-meta.xml
<CustomField>
    <fullName>EmployerZipCode__c</fullName>
    <description>PacPoint-KN101819-Created for PVL Sprint 2 Phase 1</description>
    <label>Employer Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>