force-app/main/default/objects/License__c/fields/EntityConversion__c.field-meta.xml
<CustomField>
    <fullName>EntityConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entity Conversion</label>
    <type>Checkbox</type>
</CustomField>