force-app/main/default/objects/License__c/fields/EntityPrincipalCounter__c.field-meta.xml
<CustomField>
    <fullName>EntityPrincipalCounter__c</fullName>
    <description>PacPoint-MV100519 - Created for PVL phase 1.Created  to be used in PB when creating associated Licenses.</description>
    <label>Entity/Principal Counter</label>
    <summaryFilterItems>
        <field>AssociatedLicense__c.PositionStatus__c</field>
        <operation>equals</operation>
        <value>D - DESIGNATED, P - PRINCIPAL</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AssociatedLicense__c.EmploymentStatus__c</field>
        <operation>equals</operation>
        <value>Employed</value>
    </summaryFilterItems>
    <summaryForeignKey>AssociatedLicense__c.EntityLicense__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>