force-app/main/default/objects/License__c/fields/EntityPrincipalFlagUsed__c.field-meta.xml
<CustomField>
    <fullName>EntityPrincipalFlagUsed__c</fullName>
    <description>Used to populate the EntityPrincipalFlagUsed from License Type</description>
    <formula>LicenseType__r.EntityPrincipalFlagUsed__c</formula>
    <label>Entity/Principal Flag Used?</label>
    <type>Checkbox</type>
</CustomField>