force-app/main/default/objects/License__c/fields/ExcludedfromChapter386HRS__c.field-meta.xml
<CustomField>
    <fullName>ExcludedfromChapter386HRS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Excluded from Chapter 386, HRS</label>
    <type>Checkbox</type>
</CustomField>