force-app/main/default/objects/License__c/fields/ExcludefromHistoryProcessing__c.field-meta.xml
<CustomField>
    <fullName>ExcludefromHistoryProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag excludes licenses that were forfeited or terminated by the batch job from being processed by the History job.</inlineHelpText>
    <label>Exclude from History Processing</label>
    <type>Checkbox</type>
</CustomField>