force-app/main/default/objects/License__c/fields/ExcludeFromInactivationProcess__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromInactivationProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to not fire the License PB for the Real Estate Batch Job - KN PacPoint 10/7/22</description>
    <label>Exclude From Inactivation Process</label>
    <type>Checkbox</type>
</CustomField>