force-app/main/default/objects/License__c/fields/ExcludefromOnlineRenewal__c.field-meta.xml
<CustomField>
    <fullName>ExcludefromOnlineRenewal__c</fullName>
    <formula>IF(
OR(
AND(
LicenseType__r.Name = &quot;APRN&quot;,
TEXT(MethodofLicensure__c) &lt;&gt; &quot;M - Graduate Level Degree&quot;
),
AND(
LicenseType__r.Name = &quot;DT&quot;,
TEXT( Privilege__c ) = &quot;A - Deep Sedation or General Anesthesia&quot;
),
AND(
LicenseType__r.Name = &quot;DT&quot;,
TEXT( Privilege__c ) = &quot;B - Moderate Sedation&quot;
),
AND(
FlaggedforAudit__c = true
),
AND(
NOT(Text(Status__c) = &quot;R - Valid Thru Expiration Date, Subject To Renewal&quot;
)),
AND(
ClassNotEligibleforOnlineRenewal__c = true
)
),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude from Online Renewal</label>
    <type>Checkbox</type>
</CustomField>