force-app/main/default/objects/License__c/fields/ExclusionReason__c.field-meta.xml
<CustomField>
    <fullName>ExclusionReason__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Exclusion Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole owner with no employees</fullName>
            </value>
            <value>
                <fullName>Partnership with no employees</fullName>
            </value>
            <value>
                <fullName>RME w/ at  least 50% of the business and has no other employees</fullName>
            </value>
            <value>
                <fullName>RME w/ at least  25% of the stocks of the corporation, collect no wages  and  an officer of the corporation and have no other employees</fullName>
            </value>
            <value>
                <fullName>Out-of-state contractor with no employees in Hawaii.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>