force-app/main/default/objects/License__c/fields/ExemptfromCE__c.field-meta.xml
<CustomField>
    <fullName>ExemptfromCE__c</fullName>
    <formula>IF(
AND(
OR(
LicenseType__r.Name = &quot;PJ&quot;,
LicenseType__r.Name = &quot;PM&quot;)
,
OriginalDateofLicensure__c &gt; LicenseType__r.ThirdYearStart__c )
,
true,
IF(
AND(
LicenseType__r.Name = &quot;RS&quot;,
LICFEffectiveDate__c &gt; LicenseType__r.FirstYearEnd__c ),
true,
IF(
AND(
LicenseType__r.Name = &quot;RS&quot;,
OriginalDateofLicensure__c &gt; LicenseType__r.FirstYearEnd__c), true, false)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exempt from CE</label>
    <type>Checkbox</type>
</CustomField>