force-app/main/default/objects/License__c/fields/ExemptfromRenewal__c.field-meta.xml
<CustomField>
    <fullName>ExemptfromRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN082319- Created for PVL Phase 1</description>
    <inlineHelpText>If checked, this license will be exempt from renewal.</inlineHelpText>
    <label>Exempt from Renewal</label>
    <type>Checkbox</type>
</CustomField>