force-app/main/default/objects/License__c/fields/FileEngines__c.field-meta.xml
<CustomField>
    <fullName>FileEngines__c</fullName>
    <description>PacPoint-AZ011119 - Created for PVL phase 1. To be used to populate the name of  the Doc generator Settings that has the document we want to create.</description>
    <label>File Engines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>