force-app/main/default/objects/License__c/fields/FileNo__c.field-meta.xml
<CustomField>
    <fullName>FileNo__c</fullName>
    <formula>IF( Licensee__r.IsPersonAccount = false,&quot;File No:&quot; +  TruncatedPVLBPID__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be display on the notice of licensure</inlineHelpText>
    <label>File No.</label>
    <type>Text</type>
</CustomField>