force-app/main/default/objects/License__c/fields/FilePrepBy__c.field-meta.xml
<CustomField>
    <fullName>FilePrepBy__c</fullName>
    <description>PacPoint-KN12172020-Created for PVL Phase 1</description>
    <label>File Prep By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>