force-app/main/default/objects/License__c/fields/FingerprintDate__c.field-meta.xml
<CustomField>
    <fullName>FingerprintDate__c</fullName>
    <inlineHelpText>Indicates the last time the Licensee was confirmed to have been fingerprinted</inlineHelpText>
    <label>Fingerprint Date</label>
    <type>Date</type>
</CustomField>