force-app/main/default/objects/License__c/fields/FlaggedforAudit__c.field-meta.xml
<CustomField>
    <fullName>FlaggedforAudit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <inlineHelpText>Indicates that the License has been flagged for random audit.</inlineHelpText>
    <label>Flagged for Audit</label>
    <type>Checkbox</type>
</CustomField>