force-app/main/default/objects/License__c/fields/ForfeitureDate__c.field-meta.xml
<CustomField>
    <fullName>ForfeitureDate__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <inlineHelpText>Date after which license becomes Delinquent (D Status).</inlineHelpText>
    <label>Forfeiture Date</label>
    <type>Date</type>
</CustomField>