force-app/main/default/objects/License__c/fields/fxBreakinInsuranceCoverageAllowed__c.field-meta.xml
<CustomField>
    <fullName>fxBreakinInsuranceCoverageAllowed__c</fullName>
    <description>PacPoint: RdG - Case # 7693 - For  PVL Phase 1 - References the Break in Insurance from the License Type.</description>
    <formula>LicenseType__r.BreakinInsuranceCoverageAllowed__c</formula>
    <label>Break in Insurance Coverage Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>