force-app/main/default/objects/License__c/fields/fxHasPendingInsurance__c.field-meta.xml
<CustomField>
    <fullName>fxHasPendingInsurance__c</fullName>
    <description>PacPoint:&lt;Initials + Case #&gt;-&lt;Project + Phase&gt; - Displays the number Insurance that are in Pending Status for this license.</description>
    <label>Has Pending Insurance</label>
    <summaryFilterItems>
        <field>InsuranceBond__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>InsuranceBond__c.License__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>