force-app/main/default/objects/License__c/fields/fxLicenseTypeRequiresInsurance__c.field-meta.xml
<CustomField>
    <fullName>fxLicenseTypeRequiresInsurance__c</fullName>
    <description>PacPoint:RdG Case # 7666 - For PVL Phase 1
Checks the License Type what Insurance / Bond type it requires.</description>
    <formula>IF(INCLUDES( LicenseType__r.InsuranceBondTypesRequired__c , &quot;BD - Bond&quot;), &quot;BD;&quot;, NULL)  + 
IF(INCLUDES( LicenseType__r.InsuranceBondTypesRequired__c , &quot;LI - Liability&quot;), &quot;LI;&quot;, NULL)  + 
IF(INCLUDES( LicenseType__r.InsuranceBondTypesRequired__c , &quot;WC - Workers Compensation&quot;), &quot;WC;&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Type Requires Insurance</label>
    <type>Text</type>
</CustomField>