force-app/main/default/objects/License__c/fields/GenerateADDPLetter__c.field-meta.xml
<CustomField>
    <fullName>GenerateADDPLetter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN10292020-Created for case 11390</description>
    <label>Generate ADDP Letter</label>
    <type>Checkbox</type>
</CustomField>