force-app/main/default/objects/License__c/fields/GenerateAmendmentApplication__c.field-meta.xml
<CustomField>
    <fullName>GenerateAmendmentApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN06292020-Created for PVL Phase 1 Sprint 6</description>
    <label>Generate Amendment Application</label>
    <type>Checkbox</type>
</CustomField>