force-app/main/default/objects/License__c/fields/GenerateApprenticeRegistrationForm__c.field-meta.xml
<CustomField>
    <fullName>GenerateApprenticeRegistrationForm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV112719 - Created for PVL phase 1</description>
    <label>Generate Apprentice Registration Form</label>
    <type>Checkbox</type>
</CustomField>