force-app/main/default/objects/License__c/fields/GenerateBondWaiver__c.field-meta.xml
<CustomField>
    <fullName>GenerateBondWaiver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN case 5288 - Created for PVL Phase 1 Sprint 3</description>
    <label>Generate Bond Waiver</label>
    <type>Checkbox</type>
</CustomField>