force-app/main/default/objects/License__c/fields/GenerateClassifications__c.field-meta.xml
<CustomField>
    <fullName>GenerateClassifications__c</fullName>
    <description>PacPoint-MV083019 - Created for PVL phase 1. To be used in the trigger to know when the License Classifications need to be populated.</description>
    <formula>Application__r.GenerateLicense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Classifications</label>
    <type>Checkbox</type>
</CustomField>