force-app/main/default/objects/License__c/fields/GenerateClassInactivationNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateClassInactivationNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN03122020-Created for PVL Phase 1 Sprint 3</description>
    <label>Generate Class Inactivation Notification</label>
    <type>Checkbox</type>
</CustomField>