force-app/main/default/objects/License__c/fields/GenerateDuplicateRenewalForm__c.field-meta.xml
<CustomField>
    <fullName>GenerateDuplicateRenewalForm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV110519 - Created for PVL phase 1</description>
    <label>Generate Duplicate Renewal Form</label>
    <type>Checkbox</type>
</CustomField>