force-app/main/default/objects/License__c/fields/GenerateEntityLosesRMENotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateEntityLosesRMENotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT031420 - Created for PVL phase 1</description>
    <label>Generate Entity Loses RME Notification</label>
    <type>Checkbox</type>
</CustomField>