force-app/main/default/objects/License__c/fields/GenerateFlaggedforAuditNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateFlaggedforAuditNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN10292020-Created for PVL Phase 1</description>
    <label>Generate Flagged for Audit Notification</label>
    <type>Checkbox</type>
</CustomField>