force-app/main/default/objects/License__c/fields/GenerateGenericNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateGenericNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Generic Notification</label>
    <type>Checkbox</type>
</CustomField>