force-app/main/default/objects/License__c/fields/GenerateLICFApp__c.field-meta.xml
<CustomField>
    <fullName>GenerateLICFApp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint: CL - Case# 00008491 - New checkbox field on License - Generate LICF App</description>
    <label>Generate LICF App</label>
    <type>Checkbox</type>
</CustomField>