force-app/main/default/objects/License__c/fields/GenerateLICFNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateLICFNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate LICF Notification</label>
    <type>Checkbox</type>
</CustomField>