force-app/main/default/objects/License__c/fields/GenerateLossEntityINSNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateLossEntityINSNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint: Alvin 00008210 - For PVL Phase 1</description>
    <label>Generate Loss Of Entity INS Notification</label>
    <type>Checkbox</type>
</CustomField>