force-app/main/default/objects/License__c/fields/GenerateLossOfDualNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateLossOfDualNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint - KN 07272020 - Created for Phase 1 Sprint 6</description>
    <label>Generate Loss of Dual Notification</label>
    <type>Checkbox</type>
</CustomField>