force-app/main/default/objects/License__c/fields/GenerateLossOfINSBondNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateLossOfINSBondNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint: RdG - Case 7775 | For PVL Phase 1 | Generate Loss Of INSBond Notification</description>
    <label>Generate Loss Of INSBond Notification</label>
    <type>Checkbox</type>
</CustomField>