force-app/main/default/objects/License__c/fields/GenerateNoticeofLicensure__c.field-meta.xml
<CustomField>
    <fullName>GenerateNoticeofLicensure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV110519 - Created for PVL phase 1</description>
    <label>Generate Notice of Licensure</label>
    <type>Checkbox</type>
</CustomField>