force-app/main/default/objects/License__c/fields/GenerateNoticeofLicensureEmail__c.field-meta.xml
<CustomField>
    <fullName>GenerateNoticeofLicensureEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Notice of Licensure Email</label>
    <type>Checkbox</type>
</CustomField>