force-app/main/default/objects/License__c/fields/GenerateRB2SOApprovalLetter__c.field-meta.xml
<CustomField>
    <fullName>GenerateRB2SOApprovalLetter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-DN10272020 - Created for PVL Sprint 7 Phase 1</description>
    <label>Generate RB2SO Approval Letter</label>
    <type>Checkbox</type>
</CustomField>