force-app/main/default/objects/License__c/fields/GenerateRELOCApp__c.field-meta.xml
<CustomField>
    <fullName>GenerateRELOCApp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN07152020-Created for PVL Phase 1 Sprint 6</description>
    <label>Generate RELOC App</label>
    <type>Checkbox</type>
</CustomField>