force-app/main/default/objects/License__c/fields/GenerateRELOCNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateRELOCNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN12042020 - Created for PVL Phase 1</description>
    <label>Generate RELOC Notification</label>
    <type>Checkbox</type>
</CustomField>