force-app/main/default/objects/License__c/fields/GenerateREMOfINSBondNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateREMOfINSBondNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint - KN Case 8693</description>
    <label>Generate REM Of INS Bond Notification</label>
    <type>Checkbox</type>
</CustomField>