force-app/main/default/objects/License__c/fields/GenerateRenewalApplicationA1Active__c.field-meta.xml
<CustomField>
    <fullName>GenerateRenewalApplicationA1Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV102319 - Created for PVL phase 1</description>
    <label>Generate Renewal Application A1-Active</label>
    <type>Checkbox</type>
</CustomField>