force-app/main/default/objects/License__c/fields/GenerateRenewalApplicationA3Active__c.field-meta.xml
<CustomField>
    <fullName>GenerateRenewalApplicationA3Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV102419 - Created for PVL phase 1</description>
    <label>Generate Renewal Application A3-Active</label>
    <type>Checkbox</type>
</CustomField>