force-app/main/default/objects/License__c/fields/GenerateRenewalApplicationA3Inactive__c.field-meta.xml
<CustomField>
    <fullName>GenerateRenewalApplicationA3Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV102419 - Created for PVL phase 1</description>
    <label>Generate Renewal Application A3-Inactive</label>
    <type>Checkbox</type>
</CustomField>