force-app/main/default/objects/License__c/fields/GenerateRenewalApplicationHCActive__c.field-meta.xml
<CustomField>
    <fullName>GenerateRenewalApplicationHCActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV102419 - Created for PVL phase 1</description>
    <label>Generate Renewal Application HC-Active</label>
    <type>Checkbox</type>
</CustomField>