force-app/main/default/objects/License__c/fields/GenerateRMELosesEntityNotification__c.field-meta.xml
<CustomField>
    <fullName>GenerateRMELosesEntityNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT031420 - Created for PVL phase 1</description>
    <label>Generate RME Loses Entity Notification</label>
    <type>Checkbox</type>
</CustomField>