force-app/main/default/objects/License__c/fields/GenerateScanSheet__c.field-meta.xml
<CustomField>
    <fullName>GenerateScanSheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN06292020-Created for PVL Phase 1 Sprint 6</description>
    <label>Generate Scan Sheet</label>
    <type>Checkbox</type>
</CustomField>