force-app/main/default/objects/License__c/fields/GenerateTemporaryLicense__c.field-meta.xml
<CustomField>
    <fullName>GenerateTemporaryLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV120619 - Created for PVL phase 1</description>
    <label>Generate Temporary License</label>
    <type>Checkbox</type>
</CustomField>