force-app/main/default/objects/License__c/fields/GenerateVerificationofHoursForm__c.field-meta.xml
<CustomField>
    <fullName>GenerateVerificationofHoursForm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN06292020-Created for PVL Phase 1 Sprint 6</description>
    <label>Generate Verification of Hours Form</label>
    <type>Checkbox</type>
</CustomField>