force-app/main/default/objects/License__c/fields/GenericInactiveRenewalForm__c.field-meta.xml
<CustomField>
    <fullName>GenericInactiveRenewalForm__c</fullName>
    <description>Used to populate the license type&apos;s renewal form.</description>
    <formula>LicenseType__r.GenericInactiveRenewalForm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generic Inactive Renewal Form</label>
    <type>Checkbox</type>
</CustomField>