force-app/main/default/objects/License__c/fields/HasLicenseConditions__c.field-meta.xml
<CustomField>
    <fullName>HasLicenseConditions__c</fullName>
    <description>PacPoint-MV121019 - Created for PVL phase 1. Created to be used in logic for the Doc Generator Settings.</description>
    <label>Has License Conditions</label>
    <summaryForeignKey>LicenseConditions__c.License__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>