force-app/main/default/objects/License__c/fields/HasRNEWAppInDependencyStatus__c.field-meta.xml
<CustomField>
    <fullName>HasRNEWAppInDependencyStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN06252020- Case 8810 - Created for PVL Phase 1 Sprint 6</description>
    <inlineHelpText>Used to indicate when a Current License has a RNEW App in a D Phase, if they have this checkbox populated, when/if the License goes into a D - Forfeited Status, Salesforce will generate a Non Renewal Letter.</inlineHelpText>
    <label>Has RNEW App In Dependency Status</label>
    <type>Checkbox</type>
</CustomField>